앱 아이콘 변경, 파일명 변경

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="#F4F4F4"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".MovieDetailActivity">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
