--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="#F4F4F4"
         android:orientation="vertical"
-        tools:context=".MovieDetailActivity">
+        tools:context=".moviedetail.MovieDetailActivity">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -20,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <ImageView
                 android:id="@+id/iv_movie_detail_act_main_image"
@@ -140,7 +140,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView3"
+                        android:id="@+id/btn_movie_detail_act_like"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/selector_thumb_up" />
@@ -161,7 +161,7 @@
                         android:layout_height="wrap_content" />
 
                     <ImageView
-                        android:id="@+id/imageView4"
+                        android:id="@+id/btn_movie_detail_act_dislike"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/selector_thumb_down" />
@@ -188,7 +188,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -343,7 +343,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@android:color/white"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/textView21"
@@ -379,7 +379,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@android:color/white"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/textView24"
