--- a/app/src/main/res/layout/rv_item_movie_review.xml
+++ b/app/src/main/res/layout/rv_item_movie_review.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_rv_movie_review_profile"
@@ -30,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/iv_rv_movie_review_nickname"
+            android:id="@+id/tv_rv_movie_review_nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
