PJT2. 코드리뷰 레이아웃 수정 및 리스트뷰 높이 이슈 해결, 기타 리뷰 조언내용들 반영

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -522,16 +522,15 @@
 
             <ListView
                 android:id="@+id/rv_movie_detail_review_list"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:nestedScrollingEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView29"
-                android:nestedScrollingEnabled="false"
-                />
+                app:layout_constraintTop_toBottomOf="@+id/textView29" />
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
