--- a/app/src/main/res/layout/rv_item_movie_review.xml
+++ b/app/src/main/res/layout/rv_item_movie_review.xml
@@ -13,108 +13,104 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/tv_rv_movie_review_nickname"
         app:srcCompat="@drawable/user1" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
+
+    <TextView
+        android:id="@+id/tv_rv_movie_review_nickname"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_weight="0"
+        android:text="TextView"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toEndOf="@+id/iv_rv_movie_review_profile"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/tv_rv_movie_review_time_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/tv_rv_movie_review_nickname"
+        app:layout_constraintTop_toBottomOf="@+id/tv_rv_movie_review_nickname" />
+
+    <RatingBar
+        android:id="@+id/rating_rv_movie_review"
+        style="@style/Widget.AppCompat.RatingBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:foregroundTint="@color/mint"
+        android:isIndicator="true"
+        android:max="5"
+        android:numStars="5"
+        android:progressBackgroundTint="@color/mint"
+        android:progressTint="@color/mint"
+        android:secondaryProgressTint="@color/mint"
+        android:stepSize="0.1"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_rv_movie_review_time_text"
+        app:layout_constraintStart_toEndOf="@+id/tv_rv_movie_review_time_text"
+        app:layout_constraintTop_toTopOf="@+id/tv_rv_movie_review_time_text" />
+
+    <TextView
+        android:id="@+id/iv_rv_movie_review_contents"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="0"
+        android:text="TextView"
+        android:textColor="@android:color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/tv_rv_movie_review_time_text"
+        app:layout_constraintTop_toBottomOf="@+id/tv_rv_movie_review_time_text" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:layout_weight="0"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/iv_rv_movie_review_contents"
+        app:layout_constraintTop_toBottomOf="@+id/iv_rv_movie_review_contents">
 
         <TextView
-            android:id="@+id/tv_rv_movie_review_nickname"
+            android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="TextView"
+            android:layout_marginRight="8dp"
+            android:text="추천"
             android:textColor="@android:color/black" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_rv_movie_review_time_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
-                android:text="TextView" />
-
-            <RatingBar
-                android:id="@+id/rating_rv_movie_review"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:foregroundTint="#7FCAC3"
-                android:isIndicator="true"
-                android:max="5"
-                android:numStars="5"
-                android:progressBackgroundTint="#7FCAC3"
-                android:progressTint="#7FCAC3"
-                android:secondaryProgressTint="#7FCAC3"
-                android:stepSize="0.1" />
-        </LinearLayout>
 
         <TextView
-            android:id="@+id/iv_rv_movie_review_contents"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_weight="0"
-            android:text="TextView"
-            android:textColor="@android:color/black" />
-
-        <LinearLayout
+            android:id="@+id/tv_rv_movie_review_recommend_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_weight="0"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_marginRight="8dp"
+            android:text="0"
+            android:textColor="@android:color/black" />
 
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:text="추천"
-                android:textColor="@android:color/black" />
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:text="|"
+            android:textColor="@android:color/black" />
 
-            <TextView
-                android:id="@+id/tv_rv_movie_review_recommend_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:text="0"
-                android:textColor="@android:color/black" />
+        <TextView
+            android:id="@+id/btn_rv_movie_review_report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="신고하기" />
 
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:text="|"
-                android:textColor="@android:color/black" />
-
-            <TextView
-                android:id="@+id/btn_rv_movie_review_report"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="신고하기" />
-
-        </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
