PJT3. 한줄평 작성 레이아웃 완성

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="mint">#7FCAC3</color>
+    <color name="yellow">#ffd7ae</color>
 </resources>
