PJT3. 한줄평 목록 레이아웃 완성

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="mint">#7FCAC3</color>
     <color name="yellow">#ffd7ae</color>
+
+    <color name="backgroundGray">#F4F4F4</color>
 </resources>
