--- a/app/src/main/res/layout/activity_review_more.xml
+++ b/app/src/main/res/layout/activity_review_more.xml
@@ -59,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:isIndicator="false"
+            android:stepSize="0.1"
             app:layout_constraintBottom_toBottomOf="@+id/tv_review_more_act_star_count"
             app:layout_constraintEnd_toStartOf="@+id/tv_review_more_act_star_count"
             app:layout_constraintTop_toTopOf="@+id/tv_review_more_act_star_count" />
@@ -91,9 +92,12 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/zone_review_more_act_review_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/white"
+        android:overScrollMode="never"
+        android:scrollbarSize="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/zone_review_more_act_info">
@@ -146,11 +150,13 @@
         <ListView
             android:id="@+id/rv_review_more_review_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            android:scrollbarSize="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView29" />
