모든 불변하는 color/text들xml에 따로 정리 완료

--- a/app/src/main/res/drawable/border_rect_purple_white.xml
+++ b/app/src/main/res/drawable/border_rect_purple_white.xml
@@ -4,6 +4,6 @@
 
     <stroke
         android:width="2dp"
-        android:color="#bf58db" />
+        android:color="@color/purple" />
     <solid android:color="@android:color/white" />
 </shape>
