--- a/app/src/main/res/layout/activity_review_more.xml
+++ b/app/src/main/res/layout/activity_review_more.xml
@@ -108,7 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:text="한줄평"
+            android:text="@string/review"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -138,8 +138,8 @@
                 android:id="@+id/textView30"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="작성하기"
-                android:textColor="#e44418"
+                android:text="@string/write"
+                android:textColor="@color/orange"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 tools:layout_editor_absoluteX="319dp"
