--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@color/backgroundGray"
         android:orientation="vertical"
-        tools:context=".moviedetail.MovieDetailActivity">
+        tools:context=".movie.detail.MovieDetailActivity">
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
