--- a/app/src/main/res/layout/activity_movie_select.xml
+++ b/app/src/main/res/layout/activity_movie_select.xml
@@ -10,9 +10,12 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_movie_select_act"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="440dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="32dp"
+        android:clipToPadding="false"
+        android:paddingLeft="34dp"
+        android:paddingRight="34dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_movie_select_act_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
