--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -25,8 +25,8 @@
 
             <ImageView
                 android:id="@+id/iv_movie_detail_act_main_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="140dp"
+                android:layout_height="200dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
@@ -82,7 +82,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_movie_detail_act_release_date"
+                        android:id="@+id/tv_movie_detail_act_opening_day"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2014.07.23"
@@ -102,7 +102,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/tv_movie_detail_act_category"
+                        android:id="@+id/tv_movie_detail_act_genre"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="액션"
@@ -221,14 +221,6 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="위"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
                     <Space
                         android:layout_width="8dp"
                         android:layout_height="wrap_content" />
@@ -241,13 +233,6 @@
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/textView12"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="%"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -289,7 +274,7 @@
                         android:layout_height="wrap_content" />
 
                     <TextView
-                        android:id="@+id/textView17"
+                        android:id="@+id/tv_movie_detail_act_star_rate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="8.2"
@@ -321,20 +306,13 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView19"
+                        android:id="@+id/tv_movie_detail_act_accumulation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="839,399"
                         android:textSize="18sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/textView20"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="명"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
@@ -370,8 +348,10 @@
                 android:text="@string/content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView21" />
+                app:layout_constraintTop_toBottomOf="@+id/textView21"
+                app:layout_constraintVertical_bias="0.0" />
 
         </android.support.constraint.ConstraintLayout>
 
