--- a/app/src/main/res/layout/activity_review_more.xml
+++ b/app/src/main/res/layout/activity_review_more.xml
@@ -8,6 +8,17 @@
     android:background="@color/backgroundGray"
     tools:context=".review.more.ReviewMoreActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_review_more_act"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/zone_review_more_act_info"
         android:layout_width="match_parent"
@@ -15,7 +26,7 @@
         android:background="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_review_more_act">
 
         <TextView
             android:id="@+id/tv_review_more_act_title"
