--- a/app/src/main/res/layout/activity_review_write.xml
+++ b/app/src/main/res/layout/activity_review_write.xml
@@ -7,6 +7,17 @@
     android:background="@android:color/white"
     tools:context=".review.write.ReviewWriteActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_review_write_act"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_review_write_act_title"
         android:layout_width="wrap_content"
@@ -17,7 +28,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_review_write_act" />
 
     <ImageView
         android:id="@+id/iv_review_write_act_rating"
