--- a/app/src/main/res/layout/fragment_movie_select.xml
+++ b/app/src/main/res/layout/fragment_movie_select.xml
@@ -4,11 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_background"
-    tools:context=".movie.select.MovieSelectActivity">
+    android:background="@drawable/main_background">
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/vp_movie_select_act"
+        android:id="@+id/vp_movie_select_frag"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="32dp"
