PJT5. 영화 목록 서버연결 완료

--- a/app/src/main/res/layout/fragment_movie_select.xml
+++ b/app/src/main/res/layout/fragment_movie_select.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     android:background="@drawable/main_background">
 
+    <ProgressBar
+        android:id="@+id/progressBar_movie_select_frag"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/vp_movie_select_frag"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_movie_select_frag"
         android:layout_width="0dp"
@@ -16,7 +28,11 @@
         android:paddingRight="34dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
+
+    </android.support.v4.view.ViewPager>
 
 </android.support.constraint.ConstraintLayout>
