PJT5. 리뷰 모두보기 일단 20개 불러오기 완성

--- a/app/src/main/res/layout/activity_review_more.xml
+++ b/app/src/main/res/layout/activity_review_more.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundGray"
-    tools:context=".review.more.ReviewMoreActivity">
+    tools:context=".ui.review.more.ReviewMoreActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_review_more_act"
@@ -172,4 +172,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView29" />
     </android.support.constraint.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar_review_more_act"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
