--- a/app/src/main/res/layout/activity_movie_home.xml
+++ b/app/src/main/res/layout/activity_movie_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_movie_home_act"
-    tools:context=".movie.MovieHomeActivity">
+    tools:context=".ui.movie.MovieHomeActivity">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
