PJT7. 영상이면 플레이 아이콘 뜨게 만듦, 갤러리가 없는경우 아예 뷰를 안보이게 만듦.

--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -435,6 +435,7 @@
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/zone_movie_detail_frag_gallery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
