--- a/app/src/main/res/layout/rv_item_movie_gallery.xml
+++ b/app/src/main/res/layout/rv_item_movie_gallery.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="121dp"
     android:layout_height="70dp">
 
@@ -16,4 +17,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:color/darker_gray" />
+
+    <ImageView
+        android:id="@+id/iv_rv_movie_gallery_video"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_rv_movie_gallery_image"
+        app:layout_constraintStart_toStartOf="@+id/iv_rv_movie_gallery_image"
+        app:srcCompat="@drawable/play" />
+
 </android.support.constraint.ConstraintLayout>
